--- a/BookManagementAPI/BookManagementAPI.csproj
+++ b/BookManagementAPI/BookManagementAPI.csproj
@@ -12,4 +12,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
